--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
 # DATABASE CONNECTION
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=
-DB_NAME=olelo
+# DB_HOST=localhost
+# DB_USER=root
+# DB_PASS=
+# DB_NAME=olelo
+DB_HOST=127.0.0.1
+DB_USER=olelo
+DB_PASS=123456789
+DB_NAME=uas222410101052
 
 # # ADMIN CREDENTIALS
 # NAME=
@@ -10,6 +14,9 @@ DB_NAME=olelo
 # PASSWORD=
 
 # BASEURL
-BASEURL=http://localhost/olelo/
-BASEDIR=olelo
-BASESTYLE=http://localhost/olelo/resource/views
+# BASEURL=http://localhost/olelo/
+# BASEDIR=olelo
+BASEURL=https://222410101052.pbw.ilkom.unej.ac.id/uas/
+BASEDIR=/uas/
+BASESTYLE=https://222410101052.pbw.ilkom.unej.ac.id/uas/resource/views
+
