--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
-    RewriteBase /olelo/
+    RewriteBase /uas/
     RewriteRule ^index\\.php$ - [L]
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule . /olelo/index.php [L]
+    RewriteRule . /uas/index.php [L]
